--- a/parent/device-registry/src/main/resources/application.yml
+++ b/parent/device-registry/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  mvc:
+    view:
+      prefix: /views/
+      suffix: .jsp
   datasource:
     driver-class-name: org.hsqldb.jdbc.JDBCDriver
     url: jdbc:hsqldb:mem:testdb;DB_CLOSE_DELAY=-1
