disabling secondary level cache for now

--- a/parent/device-registry/src/main/resources/application.yml
+++ b/parent/device-registry/src/main/resources/application.yml
@@ -10,5 +10,26 @@ spring:
     password: 
   jpa:
     show-sql: true
-    hibernate:
-      ddl-auto: update
+    properties:
+      javax:
+        cache:
+          missing_cache_strategy: create
+        persistence:
+          sharedCache: 
+            mode: ALL 
+      hibernate:
+        ddl-auto: create
+        format_sql: false
+        generate_statistics: false
+        cache:
+          use_second_level_cache: false
+          use_query_cache: false
+          region:
+            factory_class: com.hazelcast.hibernate.HazelcastCacheRegionFactory  
+          
+logging:
+  level:
+    org.hibernate.tool.schema.internal.ExceptionHandlerLoggedImpl: ERROR
+    com:
+      thyng: trace
+      hazelcast: info
