--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -8,7 +8,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<spring-boot.version>2.0.1.RELEASE</spring-boot.version>
+		<spring-boot.version>2.0.1.RELEASE</spring-boot.version>  <!-- 2.1.3 is latest-->
 		<spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.plugin.version>3.5.1</maven.compiler.plugin.version>
