--- a/parent/device-registry/src/main/resources/application.yml
+++ b/parent/device-registry/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
             mode: ALL 
       hibernate:
         ddl-auto: create
-        format_sql: false
+        format_sql: true
         generate_statistics: false
         cache:
           use_second_level_cache: false
