--- a/parent/gateway/gateway-server/pom.xml
+++ b/parent/gateway/gateway-server/pom.xml
@@ -38,6 +38,11 @@
 			<groupId>io.netty</groupId>
 			<artifactId>netty-dev-tools</artifactId>
 		</dependency>
+		 <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>19.0</version>
+        </dependency>
 	</dependencies>
 
 	<repositories>
