--- a/parent/core/pom.xml
+++ b/parent/core/pom.xml
@@ -10,6 +10,8 @@
 
 	<properties>
 		<kryo.version>5.0.0-RC2</kryo.version>
+		<paho.version>1.2.1</paho.version>
+		<californium.version>2.0.0-M14</californium.version>
 	</properties>
 
 	<dependencies>
@@ -21,6 +23,24 @@
 			<groupId>com.esotericsoftware</groupId>
 			<artifactId>kryo</artifactId>
 			<version>${kryo.version}</version>
+		</dependency>
+		<!-- <dependency>
+			<groupId>org.eclipse.paho</groupId>
+			<artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+			<version>${paho.version}</version>
+		</dependency> -->
+		<dependency>
+			<groupId>org.eclipse.californium</groupId>
+			<artifactId>californium-core</artifactId>
+			<version>${californium.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
 		</dependency>
 	</dependencies>
 
