--- a/parent/gateway/gateway-no-dep/src/main/resources/Thyng.properties
+++ b/parent/gateway/gateway-no-dep/src/main/resources/Thyng.properties
@@ -1,8 +1,9 @@
-thyng.server.url=http://localhost:8081/api/v1
-thyng.server.url.registration=/gateways/registrations
-thyng.server.url.heartbeat=/gateways/%s/heartbeats
-thyng.server.username=0.0@gmail.com
-thyng.server.password=thyng
+thyng.server.url=localhost
+thyng.server.url.registration=gateways
+thyng.server.url.heartbeat=heartbeats
+thyng.server.url.telemetry=telemetries
+thyng.server.url.port=5684
+
 
 thyng.gateway.id=164
 thyng.gateway.coap.server.port:5683
