--- a/parent/master-data-service/src/main/resources/application.yml
+++ b/parent/master-data-service/src/main/resources/application.yml
@@ -21,14 +21,14 @@ spring:
           missing_cache_strategy: create
         persistence:
           sharedCache: 
-            mode: ALL 
+            mode: ENABLE_SELECTIVE
       hibernate:
         ddl-auto: create
         format_sql: true
         generate_statistics: false
         cache:
-          use_second_level_cache: false
-          use_query_cache: false
+          use_second_level_cache: true
+          use_query_cache: true
           region:
             factory_class: com.hazelcast.hibernate.HazelcastCacheRegionFactory  
           
