--- a/parent/master-data-service/pom.xml
+++ b/parent/master-data-service/pom.xml
@@ -11,7 +11,7 @@
 
 	<properties>
 		<org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
-		
+
 	</properties>
 
 	<dependencies>
@@ -39,6 +39,10 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-envers</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
@@ -61,10 +65,22 @@
 			<artifactId>hsqldb</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		<!-- <dependency> <groupId>com.hazelcast</groupId> <artifactId>hazelcast</artifactId> 
-			</dependency> <dependency> <groupId>com.hazelcast</groupId> <artifactId>hazelcast-client</artifactId> 
-			</dependency> <dependency> <groupId>com.hazelcast</groupId> <artifactId>hazelcast-hibernate52</artifactId> 
-			</dependency> -->
+		 <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+		<dependency>
+			<groupId>com.hazelcast</groupId>
+			<artifactId>hazelcast</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.hazelcast</groupId>
+			<artifactId>hazelcast-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.hazelcast</groupId>
+			<artifactId>hazelcast-hibernate52</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
