--- a/parent/gateway-parent/gateway/src/main/resources/Thyng.properties
+++ b/parent/gateway-parent/gateway/src/main/resources/Thyng.properties
@@ -1,10 +1,13 @@
-thyng.server.url=localhost
-thyng.server.url.registration=gateways
-thyng.server.url.heartbeat=heartbeats
-thyng.server.url.telemetry=telemetries
-thyng.server.url.port=5684
-
+thyng.server.url=http://localhost:8081/api/v1
+thyng.server.url.registration=/gateways/registrations
+thyng.server.url.heartbeat=/gateways/{id}/heartbeats
+thyng.server.url.telemetry=/telemetries
+thyng.server.username=0.0@gmail.com
+thyng.server.password=thyng
 
 thyng.gateway.id=164
+thyng.gateway.http.server.port:80
+thyng.gateway.http.server.backlog:0
+thyng.gateway.http.server.stop.delay:3
 thyng.gateway.coap.server.port:5683
 thyng.gateway.heartbeat.interval=10000
