--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -57,9 +57,8 @@
 	</build>
 
 	<modules>
-		<module>commons-model</module>
-		<module>commons-entity</module>
-		<module>commons-repository</module>
+		<module>commons-core</module>
+		<module>commons-dto</module>
 		<module>commons-service</module>
 		<module>commons-mapper</module>
 		<module>gateway-parent</module>
