--- a/parent/data-injestion-service/pom.xml
+++ b/parent/data-injestion-service/pom.xml
@@ -13,15 +13,14 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.thyng</groupId>
-			<artifactId>commons-service</artifactId>
+			<artifactId>commons-mapper</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.thyng</groupId>
-			<artifactId>commons-mapper</artifactId>
+			<artifactId>gateway-client</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
