--- a/parent/gateway-parent/gateway-client/pom.xml
+++ b/parent/gateway-parent/gateway-client/pom.xml
@@ -16,7 +16,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.thyng</groupId>
-			<artifactId>commons-model</artifactId>
+			<artifactId>commons-dto</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
