--- a/parent/gateway-parent/gateway/pom.xml
+++ b/parent/gateway-parent/gateway/pom.xml
@@ -14,12 +14,35 @@
 		<httpserver.version>20070405</httpserver.version>
 		<californium.version>2.0.0-M14</californium.version>
 	</properties>
+	
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpclient</artifactId>
+				<version>4.5.9</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.thyng</groupId>
 			<artifactId>commons-dto</artifactId>
 			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.konghq</groupId>
@@ -42,7 +65,6 @@
 		</dependency>
 	</dependencies>
 
-
 	<build>
 		<plugins>
 			<plugin>
@@ -61,5 +83,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
