--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.thyng</groupId>
@@ -8,7 +9,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<spring-boot.version>2.0.1.RELEASE</spring-boot.version>  <!-- 2.1.3 is latest-->
+		<spring-boot.version>2.0.1.RELEASE</spring-boot.version>  <!-- 2.1.3 is latest -->
 		<spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.plugin.version>3.5.1</maven.compiler.plugin.version>
@@ -30,6 +31,11 @@
 				<version>${spring-cloud.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpclient</artifactId>
+				<version>4.5.9</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
