--- a/parent/gateway-parent/pom.xml
+++ b/parent/gateway-parent/pom.xml
@@ -13,5 +13,8 @@
 	<modules>
 		<module>gateway</module>
 		<module>gateway-client</module>
+		<module>gateway-server-http</module>
+		<module>gateway-server-coap</module>
+		<module>thyng-client-http</module>
 	</modules>
 </project>
