--- a/parent/gateway-parent/gateway-server-http/pom.xml
+++ b/parent/gateway-parent/gateway-server-http/pom.xml
@@ -29,20 +29,28 @@
 	<build>
 		<plugins>
 			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<configuration>
-					<appendAssemblyId>false</appendAssemblyId>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
-				</configuration>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
 				<executions>
 					<execution>
-						<id>make-assembly</id>
 						<phase>package</phase>
 						<goals>
-							<goal>single</goal>
+							<goal>shade</goal>
 						</goals>
+						<configuration>
+							<artifactSet>
+								<excludes>
+									<exclude>com.thyng:gateway</exclude>
+									<exclude>com.thyng:commons-dto</exclude>
+									<exclude>com.thyng:commons-core</exclude>
+									<exclude>org.projectlombok:lombok</exclude>
+									<exclude>org.slf4j:slf4j-api</exclude>
+									<exclude>commons-logging:commons-logging</exclude>
+									<exclude>ch.qos.logback:logback-classic</exclude>
+									<exclude>ch.qos.logback:logback-core</exclude>
+								</excludes>
+							</artifactSet>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
