--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -13,6 +13,7 @@
 		<spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.plugin.version>3.5.1</maven.compiler.plugin.version>
+		<maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 
@@ -50,6 +51,21 @@
 					<configuration>
 						<source>${java.version}</source>
 						<target>${java.version}</target>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-shade-plugin</artifactId>
+					<version>${maven-shade-plugin.version}</version>
+					<configuration>
+						<createDependencyReducedPom>false</createDependencyReducedPom>
+						<createSourcesJar>false</createSourcesJar>
+						<keepDependenciesWithProvidedScope>false</keepDependenciesWithProvidedScope>
+						<shadedArtifactAttached>false</shadedArtifactAttached>
+						<transformers>
+							<transformer
+								implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"></transformer>
+						</transformers>
 					</configuration>
 				</plugin>
 			</plugins>
