--- a/parent/gateway-parent/gateway/src/main/resources/Thyng.properties
+++ b/parent/gateway-parent/gateway/src/main/resources/Thyng.properties
@@ -1,11 +1,7 @@
-thyng.server.url=http://localhost:8081/api/v1
-thyng.server.url.registration=/gateways/{id}/registrations
-thyng.server.url.heartbeat=/gateways/{id}/heartbeats
-thyng.server.url.telemetry=/telemetries
-thyng.server.username=0.0@gmail.com
-thyng.server.password=thyng
+thyng.server.host:localhost
+thyng.server.port:9090
 
 thyng.gateway.id=164
-thyng.gateway.http.server.backlog:0
-thyng.gateway.http.server.stop.delay:3
+thyng.gateway.server.port=system:gateway_port
+thyng.gateway.server.host=system:host
 thyng.gateway.heartbeat.interval=10000
