--- a/parent/gateway-parent/gateway/src/main/resources/Thyng.properties
+++ b/parent/gateway-parent/gateway/src/main/resources/Thyng.properties
@@ -5,4 +5,4 @@ thyng.gateway.id=164
 thyng.gateway.server.port=system:gateway_port
 thyng.gateway.server.host=system:host
 thyng.gateway.heartbeat.interval=10000
-thyng.gateway.telemetry.dispatch.delay=1000
+thyng.gateway.metrics.dispatch.delay=1000
