--- a/parent/commons-mapper/pom.xml
+++ b/parent/commons-mapper/pom.xml
@@ -9,10 +9,6 @@
 	</parent>
 	<artifactId>commons-mapper</artifactId>
 
-	<properties>
-		<org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
-	</properties>
-
 	<dependencies>
 		<dependency>
 			<groupId>com.thyng</groupId>
@@ -36,6 +32,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>${build-helper-maven-plugin.version}</version>
 				<executions>
 					<execution>
 						<id>add-source</id>
