--- a/parent/commons-service/pom.xml
+++ b/parent/commons-service/pom.xml
@@ -8,12 +8,21 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>commons-service</artifactId>
+	
+	<properties>
+		<kafka.version>2.3.0</kafka.version>
+	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.thyng</groupId>
 			<artifactId>commons-core</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka-clients</artifactId>
+			<version>${kafka.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
