--- a/parent/data-injestion-service/pom.xml
+++ b/parent/data-injestion-service/pom.xml
@@ -18,7 +18,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.thyng</groupId>
-			<artifactId>gateway-transport</artifactId>
+			<artifactId>metrics-transport</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
