--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -11,9 +11,11 @@
 		<java.version>1.8</java.version>
 		<spring-boot.version>2.0.1.RELEASE</spring-boot.version>  <!-- 2.1.3 is latest -->
 		<spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
+		<org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.plugin.version>3.5.1</maven.compiler.plugin.version>
 		<maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>
+		<build-helper-maven-plugin.version>3.0.0</build-helper-maven-plugin.version>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 
@@ -81,5 +83,6 @@
 		<module>web-api-service</module>
 		<module>data-injestion-service</module>
 		<module>data-processing-service</module>
+		<module>metrics-transport</module>
 	</modules>
 </project>
