--- a/parent/commons-service/pom.xml
+++ b/parent/commons-service/pom.xml
@@ -8,7 +8,7 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>commons-service</artifactId>
-	
+
 	<properties>
 		<kafka.version>2.3.0</kafka.version>
 	</properties>
@@ -23,6 +23,10 @@
 			<groupId>org.apache.kafka</groupId>
 			<artifactId>kafka-clients</artifactId>
 			<version>${kafka.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
