--- a/parent/commons-service/src/main/resources/application-dev.properties
+++ b/parent/commons-service/src/main/resources/application-dev.properties
@@ -2,6 +2,13 @@
 logging.level.org.hibernate.tool.schema.internal.ExceptionHandlerLoggedImpl=ERROR
 logging.level.com.hazelcast=info
 
+# Zookeeper configuration
+spring.cloud.zookeeper.connect-string=localhost:2181
+
+# Kafka configuration
+kafka.client-id=thyng-injestor
+kafka.bootstrap-servers=localhost:9092
+
 # Datasource configuration
 spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
 spring.datasource.url=jdbc:hsqldb:mem:testdb;DB_CLOSE_DELAY=-1
