--- a/parent/data-injestion-service/pom.xml
+++ b/parent/data-injestion-service/pom.xml
@@ -16,16 +16,11 @@
 			<artifactId>commons-mapper</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>com.thyng</groupId>
-			<artifactId>metrics-transport</artifactId>
-			<version>${project.version}</version>
-		</dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
